@@ -9,6 +9,8 @@ import java.util.Calendar;
 import java.util.Date;
 
 /**
+ * 日期工具类
+ * 
  * @author LiuBaoWen
  *
  */
@@ -392,7 +394,7 @@ public class CalendarUtils {
 	 */
 	public static Date getFirstDayOfQuarter(Integer year, Integer quarter) {
 		Calendar calendar = Calendar.getInstance();
-		Integer month = new Integer(0);
+		Integer month = Integer.valueOf(0);
 		if (quarter == 1) {
 			month = 1 - 1;
 		} else if (quarter == 2) {
@@ -429,7 +431,7 @@ public class CalendarUtils {
 	 */
 	public static Date getLastDayOfQuarter(Integer year, Integer quarter) {
 		Calendar calendar = Calendar.getInstance();
-		Integer month = new Integer(0);
+		Integer month = Integer.valueOf(0);
 		if (quarter == 1) {
 			month = 3 - 1;
 		} else if (quarter == 2) {
@@ -466,7 +468,7 @@ public class CalendarUtils {
 	 */
 	public static Date getLastDayOfLastQuarter(Integer year, Integer quarter) {
 		Calendar calendar = Calendar.getInstance();
-		Integer month = new Integer(0);
+		Integer month = Integer.valueOf(0);
 		if (quarter == 1) {
 			month = 12 - 1;
 		} else if (quarter == 2) {
